# Code-Conquest-The-Adventure-Game

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/diagrams/: login-module.md
src/: ast_test.py  auth.py  globals.py  main.py  ui.py
