[project]
name = "code_conquest"
version = "0.1.0"
description = "Code Conquest - The Adventure Game"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "pygame-ce==2.5.5",
    "pygame-menu-ce==4.5.4",
    "python-dotenv==1.1.1",
    "supabase==2.17.0",
]

[tool.yapf]
indent_width = 2

[tool.basedpyright]
reportMissingTypeStubs = "none"
reportUnusedCallResult = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportPrivateImportUsage = "none"
