[project]
name = "code_conquest"
version = "0.1.0"
description = "Code Conquest - The Adventure Game"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "buildozer>=1.5.0",
    "kivy>=2.3.1",
    "pip>=25.1.1",
    "python-dotenv==1.1.1",
    "setuptools>=80.9.0",
    "supabase==2.17.0",
]

[tool.yapf]
indent_width = 2

[tool.basedpyright]
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = "none"

reportMissingTypeStubs = "none"
reportUnusedCallResult = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportPrivateImportUsage = "none"
